# api-go

./: .gitignore  .golangci.yaml  README.md  README_CN.md  appendData.go  core  example.go  go.mod  go.sum  perfBench.go  testGo.sh
api/: CMakeLists.txt  Makefile  account.go  account_test.go  client.go  client_test.go  core  database.go  database_test.go  dolphindb.go  dolphindb_test.go  patitioned_table_appender.go  patitioned_table_appender_test.go  pool.go  pool_test.go  request.go  request_test.go  table.go  table_appender.go  table_appender_test.go  table_test.go  task.go  task_test.go  utils.go  utils_test.go
dialer/: behavior.go  dialer.go  dialer_test.go  node.go  request.go  response.go  response_test.go  util.go
domain/: domain.go  domain_test.go  hash_domain.go  hash_domain_test.go  list_domain.go  list_domain_test.go  range_domain.go  range_domain_test.go  value_domain.go  value_domain_test.go
errors/: protocol_errors.go  protocol_errors_test.go
example/: DFSWritingWithMultiThread.go  README_CN.md  RdWrDFSTable.go  RdWrMemoryTable.go  StreamingDataWriting.go  StreamingThreadClientSubscriber.go  example.go
model/: chart.go  chart_test.go  const.go  dataform.go  dataform_test.go  datatype.go  datatype_list.go  datatype_list_test.go  datatype_test.go  dictionary.go  dictionary_test.go  io.go  io_test.go  matrix.go  matrix_test.go  pair.go  pair_test.go  parse_dataform.go  parse_dataform_test.go  parse_datatype.go  scalar.go  (+13 more)
src/: CMakeLists.txt  Makefile  dolphindb.go  dolphindb_test.go
src/include/: Exceptions.h  Streaming.h  Types.h  wrapper.cpp
(+126 files in other folders)
